fix: id:50393 Message Channel message/delivery option alignment issue

--- a/src/components/ChoiceList/ChoiceList.scss
+++ b/src/components/ChoiceList/ChoiceList.scss
@@ -22,6 +22,7 @@
   list-style: none;
   display: flex;
   margin: 0px;
+  padding-left: 0px;
   li {
     margin-right: 30px;
   };
